[project]
name = "procurement_auditor_ai"
version = "0.1.0"
description = "procurement_auditor_ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,file-processing,litellm,tools]==1.14.4",
    "jambo",
]

[project.scripts]
procurement_auditor_ai = "procurement_auditor_ai.main:run"
run_crew = "procurement_auditor_ai.main:run"
train = "procurement_auditor_ai.main:train"
replay = "procurement_auditor_ai.main:replay"
test = "procurement_auditor_ai.main:test"
run_with_trigger = "procurement_auditor_ai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
override-dependencies = ["litellm<=1.82.6"]
